CHANGES
 - transcriptome find updated for RNA-SeQC directory and its gtf file 
 - generic serializable sequence composition framework and illumina
   sequencing specific component
 - lims shim now works out driver type from a given driver
 - sequencing failure RT emails cope with GCLP (no batch_id)
 - add predicates for glossary roles

release 84.8
 - jenkins daemon definition: remove hardcoded path to prod user home directory
 - refactor snv finder to stop warnings when ref genome is undefined RT#481506
 - make function for parsing reference gemone public since it is used outside
   of the module where it is defined
 - use RTAComplete file in fallback local (instead of ftp) determination of run
   progress (which is consistent with ftp process and required for HiSeqX)

release 84.7
 - accommodate LIMs-defined dual indexes
 - Illumina samplesheet generation: do not truncate single index when shorter first
     part of dual index is present; this was written with spiked Phix in mind,
     however, spikes are not reflected in LIMs for MiSeq runs

release 84.6
 - when changing ownership of run folder, set gid bit on every level
 - reporting croaks without full stacktraces for folder and folder/location
 - daemon control:
     do not use depricated load_class method
     read a list of production users from a configuration file

release 84.5
 - staging monitor extension:
     move qc complete runfolders from analysis to outgoing
     propagate group ownership inside the runfolder
 - staging/instrument monitor:
     remove superfluous run lanes
     assume all runs are RTA
 - perform runfolder name validation against the tracking db run record
   rather than against xml feeds; compare to expected runfolder name
   if this name is not in the database yet
 - add sample_supplier_name, sample_cohort and sample_donor_id to
   st::api::lims interface

release 84.4
 - to avoid the need to create deep directory hierarchy containing www-live